build: migration of spring boot to v3
- upgraded spring boot from v3
- upgraded spring framework to v6
- moved javax.* modules to jakarta.* (for applicable)
- migrated javax.mail to jakarta.mail

BREAKING CHANGE: New spring boot and framework version